--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,17 @@
+@font-face {
+  font-family: Gilroy-Light;
+  src: url(../src/assets/fonts/Gilroy-Light.otf);
+}
+
+@font-face {
+  font-family: Gilroy-Bold;
+  src: url(../src/assets/fonts/Gilroy-ExtraBold.otf);
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gilroy-Light'
 }
 
 h1 {
